--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,12 @@
 @charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300&family=Righteous&family=Sarala:wght@400;700&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sarala&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Carter+One&display=swap');
 
 :root{
     --fonte1: 'Sarala', sans-serif;
+    --fonte2: 'Carter One', cursive;
 }
 
 *{
@@ -54,7 +53,7 @@ a{
     text-decoration: none;
     color: #d4d3d3;
     font-size: 1.5em;
-    font-family: 'Carter One', cursive;
+    font-family: var(--fonte2)
 
 }
 
